polish: Murder Mystery (#2270)
* feat(ConditionalStep): allow passing through current step text in sidebar

* refactor: modernize

* test: opt into sidebar test

* minimize start quest dialog

* refactor: gameval

* fix: don't use custom event/varbit checks

we now instead rely on ConditionalStep to be able to pass through the currect text

* fix: sidebar order

* nit: itemsteps

* guide user down for filling pot with flour

* nit: dialog id is not necessary

* fix: updated widget text requirement interface ID

* I _think_ I have to go through this dialog option to finish the quest

When following the quest normally, it would stop at the "talk to the suspect" step.

There is a chance that me talking about the customers again actually solved it, but without varbits it was difficult to
test, hence why the conditional steps I added are so guarded