@@ -31,6 +31,9 @@ import com.questhelper.requirements.conditional.Conditions;
 import com.questhelper.requirements.item.ItemRequirement;
 import com.questhelper.requirements.npc.DialogRequirement;
 import com.questhelper.requirements.runelite.RuneliteRequirement;
+import static com.questhelper.requirements.util.LogicHelper.and;
+import static com.questhelper.requirements.util.LogicHelper.not;
+import static com.questhelper.requirements.util.LogicHelper.or;
 import com.questhelper.requirements.util.LogicType;
 import com.questhelper.requirements.var.VarplayerRequirement;
 import com.questhelper.requirements.widget.WidgetTextRequirement;
@@ -39,192 +42,260 @@ import com.questhelper.requirements.zone.ZoneRequirement;
 import com.questhelper.rewards.ExperienceReward;
 import com.questhelper.rewards.ItemReward;
 import com.questhelper.rewards.QuestPointReward;
-import com.questhelper.steps.*;
+import com.questhelper.steps.ConditionalStep;
+import com.questhelper.steps.DetailedQuestStep;
+import com.questhelper.steps.ItemStep;
+import com.questhelper.steps.NpcStep;
+import com.questhelper.steps.ObjectStep;
+import com.questhelper.steps.QuestStep;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 import net.runelite.api.Skill;
 import net.runelite.api.coords.WorldPoint;
-import net.runelite.api.events.VarbitChanged;
+import net.runelite.api.gameval.InterfaceID;
 import net.runelite.api.gameval.ItemID;
 import net.runelite.api.gameval.NpcID;
 import net.runelite.api.gameval.ObjectID;
-import net.runelite.client.eventbus.Subscribe;
-
-import java.util.*;
+import net.runelite.api.gameval.VarPlayerID;
 
 public class MurderMystery extends BasicQuestHelper
 {
-	//Items Required
-	ItemRequirement pot, pungentPot, criminalsDaggerAny, criminalsDagger, criminalsDaggerFlour, criminalsThread, criminalsThread1, criminalsThread2, criminalsThread3,
-		twoFlypaper, potOfFlourHighlighted, flypaper, unknownPrint, silverNecklace, silverBook, silverBookFlour, silverNecklaceFlour, annaPrint, davidPrint, killersPrint, silverNeedle,
-		silverPot, silverNeedleFlour, silverPotFlour, elizabethPrint, frankPrint, criminalsDaggerHighlighted, criminalsDaggerFlourHighlighted, silverCup, silverCupFlour, silverBottle,
-		silverBottleFlour, bobPrint, carolPrint;
+	// Required items
+	ItemRequirement pot;
 
-	RuneliteRequirement  heardAboutPoisonSalesman, talkedToPoisonSalesman, hadThread, hadPot, hadKillerPrint;
+	// Mid-quest requirements
+	ItemRequirement pungentPot;
+	ItemRequirement criminalsDaggerAny;
+	ItemRequirement criminalsDagger;
+	ItemRequirement criminalsDaggerFlour;
+	ItemRequirement criminalsThread;
+	ItemRequirement criminalsThread1;
+	ItemRequirement criminalsThread2;
+	ItemRequirement criminalsThread3;
+	ItemRequirement twoFlypaper;
+	ItemRequirement potOfFlourHighlighted;
+	ItemRequirement flypaper;
+	ItemRequirement unknownPrint;
+	ItemRequirement silverNecklace;
+	ItemRequirement silverBook;
+	ItemRequirement silverBookFlour;
+	ItemRequirement silverNecklaceFlour;
+	ItemRequirement annaPrint;
+	ItemRequirement davidPrint;
+	ItemRequirement killersPrint;
+	ItemRequirement silverNeedle;
+	ItemRequirement silverPot;
+	ItemRequirement silverNeedleFlour;
+	ItemRequirement silverPotFlour;
+	ItemRequirement elizabethPrint;
+	ItemRequirement frankPrint;
+	ItemRequirement criminalsDaggerHighlighted;
+	ItemRequirement criminalsDaggerFlourHighlighted;
+	ItemRequirement silverCup;
+	ItemRequirement silverCupFlour;
+	ItemRequirement silverBottle;
+	ItemRequirement silverBottleFlour;
+	ItemRequirement bobPrint;
+	ItemRequirement carolPrint;
 
-	Requirement annaGuilty, bobGuilty, carolGuilty, davidGuilty, elizabethGuilty, frankGuilty, hasCriminalSilverItem, isUpstairs,
-		hasSuspectPrint, hasSilverItemFlour;
-
-	Requirement talkedToAnna, talkedToBob, talkedToCarol, talkedToDavid, talkedToElizabeth, talkedToFrank, talkedToSuspect, pleaseWaitRequirement;
-	Requirement checkedAnna, checkedBob, checkedCarol, checkedDavid, checkedElizabeth, checkedFrank, checkedSuspect;
-
+	// Zones
 	Zone upstairs;
 
-	QuestStep talkToGuard, talkToGossip, talkToPoisonSalesman, pickUpDagger, pickUpPungentPot, searchWindowForThread, fillPotWithFlour, useFlourOnDagger,
-		collectTwoFlypaper, useFlypaperOnDagger, searchAnnasBarrel, searchDavidsBarrel, searchFranksBarrel, searchElizabethsBarrel,
-		searchBobsBarrel, searchCarolsBarrel, remainingSteps, finishQuest;
+	// Miscellaneous requirements
+	RuneliteRequirement heardAboutPoisonSalesman;
+	RuneliteRequirement talkedToPoisonSalesman;
+	RuneliteRequirement talkedToPoisonSalesman2;
+	RuneliteRequirement hadThread;
+	RuneliteRequirement hadPot;
+	RuneliteRequirement hadKillerPrint;
 
-	QuestStep useFlourOnNecklace, useFlourOnCup, useFlourOnBottle, useFlourOnBook, useFlourOnNeedle, useFlourOnPot;
-	QuestStep useFlypaperOnNecklace, useFlypaperOnCup, useFlypaperOnBottle, useFlypaperOnBook, useFlypaperOnNeedle, useFlypaperOnPot;
-	QuestStep collectFlypaper, fillPotWithFlourForSilver;
-	QuestStep compareAnna, compareBob, compareCarol, compareDavid, compareElizabeth, compareFrank;
-	QuestStep talkToAnna, talkToBob, talkToFrank, talkToDavid, talkToCarol, talkToElizabeth;
-	QuestStep searchAnna, searchBob, searchCarol, searchDavid, searchElizabeth, searchFrank;
+	VarplayerRequirement annaGuilty;
+	VarplayerRequirement bobGuilty;
+	VarplayerRequirement carolGuilty;
+	VarplayerRequirement davidGuilty;
+	VarplayerRequirement elizabethGuilty;
+	VarplayerRequirement frankGuilty;
+	Conditions hasCriminalSilverItem;
+	ZoneRequirement isUpstairs;
+	Requirement hasSuspectPrint;
+	Requirement hasSilverItemFlour;
 
-	ConditionalStep useFlour, searchBarrel, useFlypaper, comparePrints, talkToSuspect, searchSuspectItem;
-	DetailedQuestStep useFlourSidebar, searchBarrelSidebar, useFlypaperSidebar, comparePrintsSidebar, talkToSuspectSidebar, searchSuspectItemSidebar;
+	Conditions talkedToAnna;
+	Conditions talkedToBob;
+	Conditions talkedToCarol;
+	Conditions talkedToDavid;
+	Conditions talkedToElizabeth;
+	Conditions talkedToFrank;
+	RuneliteRequirement talkedToSuspect;
+	WidgetTextRequirement pleaseWaitRequirement;
+
+	Requirement checkedAnna;
+	Requirement checkedBob;
+	Requirement checkedCarol;
+	Requirement checkedDavid;
+	Requirement checkedElizabeth;
+	Requirement checkedFrank;
+	Requirement checkedSuspect;
+
+	// Steps
+	QuestStep talkToGuard;
+	QuestStep talkToGossip;
+	QuestStep talkToPoisonSalesman;
+	QuestStep talkToPoisonSalesman2;
+	QuestStep pickUpDagger;
+	QuestStep pickUpPungentPot;
+	QuestStep searchWindowForThread;
+	QuestStep fillPotWithFlour;
+	QuestStep useFlourOnDagger;
+	QuestStep collectTwoFlypaper;
+	QuestStep useFlypaperOnDagger;
+	QuestStep searchAnnasBarrel;
+	QuestStep searchDavidsBarrel;
+	QuestStep searchFranksBarrel;
+	QuestStep searchElizabethsBarrel;
+	QuestStep searchBobsBarrel;
+	QuestStep searchCarolsBarrel;
+	QuestStep remainingSteps;
+	QuestStep finishQuest;
+
+	QuestStep useFlourOnNecklace;
+	QuestStep useFlourOnCup;
+	QuestStep useFlourOnBottle;
+	QuestStep useFlourOnBook;
+	QuestStep useFlourOnNeedle;
+	QuestStep useFlourOnPot;
+
+	QuestStep useFlypaperOnNecklace;
+	QuestStep useFlypaperOnCup;
+	QuestStep useFlypaperOnBottle;
+	QuestStep useFlypaperOnBook;
+	QuestStep useFlypaperOnNeedle;
+	QuestStep useFlypaperOnPot;
+
+	QuestStep collectFlypaper;
+	QuestStep fillPotWithFlourForSilver;
+
+	QuestStep compareAnna;
+	QuestStep compareBob;
+	QuestStep compareCarol;
+	QuestStep compareDavid;
+	QuestStep compareElizabeth;
+	QuestStep compareFrank;
+
+	QuestStep talkToAnna;
+	QuestStep talkToBob;
+	QuestStep talkToFrank;
+	QuestStep talkToDavid;
+	QuestStep talkToCarol;
+	QuestStep talkToElizabeth;
+
+	QuestStep searchAnna;
+	QuestStep searchBob;
+	QuestStep searchCarol;
+	QuestStep searchDavid;
+	QuestStep searchElizabeth;
+	QuestStep searchFrank;
+
+	ConditionalStep useFlour;
+	ConditionalStep searchBarrel;
+	ConditionalStep useFlypaper;
+	ConditionalStep comparePrints;
+	ConditionalStep talkToSuspect;
+	ConditionalStep searchSuspectItem;
 
 	@Override
-	public Map<Integer, QuestStep> loadSteps()
-	{
-		initializeRequirements();
-		setupZone();
-		setupConditions();
-		setupSteps();
-		Map<Integer, QuestStep> steps = new HashMap<>();
-
-		steps.put(0, talkToGuard);
-
-		Requirement doesntNeedMoreFlypaper = new Conditions(LogicType.OR, twoFlypaper, new Conditions(flypaper, unknownPrint));
-
-		Conditions hadPotAndThread = new Conditions(hadThread, hadPot);
-
-		ConditionalStep checkingPrintSteps = new ConditionalStep(this, pickUpDagger);
-		/* compare prints */
-		checkingPrintSteps.addStep(new Conditions(unknownPrint, hasSuspectPrint), comparePrints);
-		checkingPrintSteps.addStep(new Conditions(unknownPrint, hasSilverItemFlour, flypaper), useFlypaper);
-		checkingPrintSteps.addStep(new Conditions(unknownPrint, hasCriminalSilverItem, flypaper, potOfFlourHighlighted), useFlour);
-		checkingPrintSteps.addStep(new Conditions(unknownPrint, hasCriminalSilverItem, flypaper), fillPotWithFlourForSilver);
-		checkingPrintSteps.addStep(new Conditions(unknownPrint, hasCriminalSilverItem), collectFlypaper);
-		/* Unknown print */
-		checkingPrintSteps.addStep(new Conditions(criminalsDaggerFlour, hasCriminalSilverItem), useFlypaperOnDagger);
-		checkingPrintSteps.addStep(new Conditions(criminalsDaggerAny, hasCriminalSilverItem, potOfFlourHighlighted), useFlourOnDagger);
-		checkingPrintSteps.addStep(new Conditions(criminalsDaggerAny, doesntNeedMoreFlypaper, hasCriminalSilverItem), fillPotWithFlour);
-		checkingPrintSteps.addStep(new Conditions(criminalsDaggerAny, doesntNeedMoreFlypaper), searchBarrel);
-		checkingPrintSteps.addStep(new Conditions(criminalsDaggerAny), collectTwoFlypaper);
-
-		ConditionalStep investigating = new ConditionalStep(this, searchWindowForThread);
-		investigating.addStep(new Conditions(hadPotAndThread, hadKillerPrint, checkedSuspect), finishQuest);
-		investigating.addStep(new Conditions(hadPotAndThread, hadKillerPrint, talkedToSuspect), searchSuspectItem);
-		investigating.addStep(new Conditions(hadPotAndThread, hadKillerPrint, talkedToPoisonSalesman), talkToSuspect);
-		investigating.addStep(new Conditions(hadPotAndThread, hadKillerPrint, heardAboutPoisonSalesman), talkToPoisonSalesman);
-		investigating.addStep(new Conditions(hadPotAndThread, hadKillerPrint), talkToGossip);
-		investigating.addStep(hadPotAndThread, checkingPrintSteps); /* Get dagger print */
-		investigating.addStep(hadThread, pickUpPungentPot);
-
-		steps.put(1, investigating);
-
-		if (client.getVarpValue(195) > 0) updateSuspect();
-
-		return steps;
-	}
-
-	@Subscribe
-	public void onVarbitChanged(VarbitChanged varbitChanged)
-	{
-		if (varbitChanged.getVarpId() != 195) return;
-
-		updateSuspect();
-	}
-
-	private void updateSuspect()
-	{
-		// 5 for me
-		int suspect = client.getVarpValue(195);
-		if (suspect == 1)
-		{
-			useFlourSidebar.getText().set(0, useFlourOnNecklace.getText().get(0));
-			searchBarrelSidebar.getText().set(0, searchAnnasBarrel.getText().get(0));
-			useFlypaperSidebar.getText().set(0, useFlypaperOnNecklace.getText().get(0));
-			comparePrintsSidebar.getText().set(0, compareAnna.getText().get(0));
-			talkToSuspectSidebar.getText().set(0, talkToAnna.getText().get(0));
-			searchSuspectItemSidebar.getText().set(0, searchAnna.getText().get(0));
-		}
-		else if (suspect == 2)
-		{
-			useFlourSidebar.getText().set(0, useFlourOnCup.getText().get(0));
-			searchBarrelSidebar.getText().set(0, searchBobsBarrel.getText().get(0));
-			useFlypaperSidebar.getText().set(0, useFlypaperOnCup.getText().get(0));
-			comparePrintsSidebar.getText().set(0, compareBob.getText().get(0));
-			talkToSuspectSidebar.getText().set(0, talkToBob.getText().get(0));
-			searchSuspectItemSidebar.getText().set(0, searchBob.getText().get(0));
-		}
-		else if (suspect == 3)
-		{
-			useFlourSidebar.getText().set(0, useFlourOnBottle.getText().get(0));
-			searchBarrelSidebar.getText().set(0, searchCarolsBarrel.getText().get(0));
-			useFlypaperSidebar.getText().set(0, useFlypaperOnBottle.getText().get(0));
-			comparePrintsSidebar.getText().set(0, compareCarol.getText().get(0));
-			talkToSuspectSidebar.getText().set(0, talkToCarol.getText().get(0));
-			searchSuspectItemSidebar.getText().set(0, searchCarol.getText().get(0));
-		}
-		else if (suspect == 4)
-		{
-			useFlourSidebar.getText().set(0, useFlourOnBook.getText().get(0));
-			searchBarrelSidebar.getText().set(0, searchDavidsBarrel.getText().get(0));
-			useFlypaperSidebar.getText().set(0, useFlypaperOnBook.getText().get(0));
-			comparePrintsSidebar.getText().set(0, compareDavid.getText().get(0));
-			talkToSuspectSidebar.getText().set(0, talkToDavid.getText().get(0));
-			searchSuspectItemSidebar.getText().set(0, searchDavid.getText().get(0));
-		}
-		else if (suspect == 5)
-		{
-			useFlourSidebar.getText().set(0, useFlourOnNeedle.getText().get(0));
-			searchBarrelSidebar.getText().set(0, searchElizabethsBarrel.getText().get(0));
-			useFlypaperSidebar.getText().set(0, useFlypaperOnNeedle.getText().get(0));
-			comparePrintsSidebar.getText().set(0, compareElizabeth.getText().get(0));
-			talkToSuspectSidebar.getText().set(0, talkToElizabeth.getText().get(0));
-			searchSuspectItemSidebar.getText().set(0, searchElizabeth.getText().get(0));
-		}
-		else if (suspect == 6)
-		{
-			useFlourSidebar.getText().set(0, useFlourOnPot.getText().get(0));
-			searchBarrelSidebar.getText().set(0, searchFranksBarrel.getText().get(0));
-			useFlypaperSidebar.getText().set(0, useFlypaperOnPot.getText().get(0));
-			comparePrintsSidebar.getText().set(0, compareFrank.getText().get(0));
-			talkToSuspectSidebar.getText().set(0, talkToFrank.getText().get(0));
-			searchSuspectItemSidebar.getText().set(0, searchFrank.getText().get(0));
-		}
-	}
-
-	public void setupZone()
+	protected void setupZones()
 	{
 		upstairs = new Zone(new WorldPoint(2727, 3571, 1), new WorldPoint(2752, 3585, 1));
+	}
+
+	@Override
+	protected void setupRequirements()
+	{
+		pot = new ItemRequirement("Pot", ItemID.POT_EMPTY);
+
+		pungentPot = new ItemRequirement("Pungent pot", ItemID.MURDERPOT2);
+
+		criminalsDaggerAny = new ItemRequirement("Criminal's dagger", ItemID.MURDERWEAPON);
+		criminalsDaggerAny.addAlternates(ItemID.MURDERWEAPONDUST, ItemID.MURDERFINGERPRINT);
+
+		criminalsDagger = new ItemRequirement("Criminal's dagger", ItemID.MURDERWEAPON);
+		criminalsDaggerHighlighted = new ItemRequirement("Criminal's dagger", ItemID.MURDERWEAPON);
+		criminalsDaggerHighlighted.setHighlightInInventory(true);
+
+		criminalsDaggerFlour = new ItemRequirement("Criminal's dagger", ItemID.MURDERWEAPONDUST);
+		criminalsDaggerFlourHighlighted = new ItemRequirement("Criminal's dagger", ItemID.MURDERWEAPONDUST);
+		criminalsDaggerFlourHighlighted.setHighlightInInventory(true);
+
+		criminalsThread = new ItemRequirement("Criminal's thread", ItemID.MURDERTHREADR);
+		criminalsThread.addAlternates(ItemID.MURDERTHREADG, ItemID.MURDERTHREADB);
+		criminalsThread1 = new ItemRequirement("Criminal's thread", ItemID.MURDERTHREADR);
+		criminalsThread2 = new ItemRequirement("Criminal's thread", ItemID.MURDERTHREADG);
+		criminalsThread3 = new ItemRequirement("Criminal's thread", ItemID.MURDERTHREADB);
+		twoFlypaper = new ItemRequirement("Flypaper", ItemID.MURDERPAPER, 2);
+		flypaper = new ItemRequirement("Flypaper", ItemID.MURDERPAPER);
+		flypaper.setHighlightInInventory(true);
+		flypaper.setTooltip("You can get more from the sack in the shed on the west of the Sinclair Mansion");
+		potOfFlourHighlighted = new ItemRequirement("Pot of flour", ItemID.POT_FLOUR);
+		potOfFlourHighlighted.setHighlightInInventory(true);
+		unknownPrint = new ItemRequirement("Unknown print", ItemID.MURDERFINGERPRINT1);
+
+		/* Thread 1 item */
+		bobPrint = new ItemRequirement("Bob's print", ItemID.MURDERFINGERPRINTB);
+		carolPrint = new ItemRequirement("Carol's print", ItemID.MURDERFINGERPRINTC);
+		silverCup = new ItemRequirement("Silver cup", ItemID.MURDERCUP);
+		silverCupFlour = new ItemRequirement("Silver cup", ItemID.MURDERCUPDUST);
+		silverBottle = new ItemRequirement("Silver bottle", ItemID.MURDERBOTTLE);
+		silverBottleFlour = new ItemRequirement("Silver bottle", ItemID.MURDERBOTTLEDUST);
+
+		/* Thread 2 items */
+		annaPrint = new ItemRequirement("Anna's print", ItemID.MURDERFINGERPRINTA);
+		davidPrint = new ItemRequirement("David's print", ItemID.MURDERFINGERPRINTD);
+		silverNecklace = new ItemRequirement("Silver necklace", ItemID.MURDERNECKLACE);
+		silverNecklaceFlour = new ItemRequirement("Silver necklace", ItemID.MURDERNECKLACEDUST);
+		silverBook = new ItemRequirement("Silver book", ItemID.MURDERBOOK);
+		silverBookFlour = new ItemRequirement("Silver book", ItemID.MURDERBOOKDUST);
+
+		/* Thread 3 items */
+		elizabethPrint = new ItemRequirement("Elizabeth's print", ItemID.MURDERFINGERPRINTE);
+		frankPrint = new ItemRequirement("Frank's print", ItemID.MURDERFINGERPRINTF);
+		silverNeedle = new ItemRequirement("Silver needle", ItemID.MURDERNEEDLE);
+		silverNeedleFlour = new ItemRequirement("Silver needle", ItemID.MURDERNEEDLEDUST);
+		silverPot = new ItemRequirement("Silver needle", ItemID.MURDERPOT);
+		silverPotFlour = new ItemRequirement("Silver needle", ItemID.MURDERPOTDUST);
+
+		killersPrint = new ItemRequirement("Killer's print", ItemID.MURDERFINGERPRINT);
 	}
 
 	public void setupConditions()
 	{
 		isUpstairs = new ZoneRequirement(upstairs);
 
-		hadThread = new RuneliteRequirement(getConfigManager(), "murdermysteryhadthread", criminalsThread.alsoCheckBank(questBank));
-		hadPot = new RuneliteRequirement(getConfigManager(), "murdermysteryhadpot", pungentPot.alsoCheckBank(questBank));
-		heardAboutPoisonSalesman = new RuneliteRequirement(getConfigManager(), "murdermysterytalkedtogossip",
-			new Conditions(true, new DialogRequirement( "Especially as I heard that the poison salesman in the Seers' village made a big sale to one of the family the other day."))
+		hadThread = new RuneliteRequirement(configManager, "murdermysteryhadthread", criminalsThread.alsoCheckBank(questBank));
+		hadPot = new RuneliteRequirement(configManager, "murdermysteryhadpot", pungentPot.alsoCheckBank(questBank));
+		heardAboutPoisonSalesman = new RuneliteRequirement(configManager, "murdermysterytalkedtogossip",
+			new Conditions(true, new DialogRequirement("Especially as I heard that the poison salesman in the Seers' village made a big sale to one of the family the other day."))
 		);
-		talkedToPoisonSalesman = new RuneliteRequirement(getConfigManager(), "murdermysterytalkedtopoisonsalesman",
+		talkedToPoisonSalesman = new RuneliteRequirement(configManager, "murdermysterytalkedtopoisonsalesman",
 			new Conditions(true, LogicType.OR,
-		    	new DialogRequirement(questHelperPlugin.getPlayerStateManager().getPlayerName(),  "Uh... no, it's ok.", false),
+				new DialogRequirement(questHelperPlugin.getPlayerStateManager().getPlayerName(), "Uh... no, it's ok.", false),
 				new DialogRequirement("Anna, Bob, Carol, David, Elizabeth and Frank all bought a bottle! " +
-				"In fact they bought the last of my supplies!")
-		));
+					"In fact they bought the last of my supplies!")
+			));
+		talkedToPoisonSalesman2 = new RuneliteRequirement(configManager, "murdermysterytalkedtopoisonsalesmanpot",
+			new Conditions(true, new DialogRequirement("Yes... I suppose that could have happened..."))
+		);
 
-		annaGuilty = new VarplayerRequirement(195, 1);
-		bobGuilty = new VarplayerRequirement(195, 2);
-		carolGuilty = new VarplayerRequirement(195, 3);
-		davidGuilty = new VarplayerRequirement(195, 4);
-		elizabethGuilty = new VarplayerRequirement(195, 5);
-		frankGuilty = new VarplayerRequirement(195, 6);
+		annaGuilty = new VarplayerRequirement(VarPlayerID.MURDERSUS, 1);
+		bobGuilty = new VarplayerRequirement(VarPlayerID.MURDERSUS, 2);
+		carolGuilty = new VarplayerRequirement(VarPlayerID.MURDERSUS, 3);
+		davidGuilty = new VarplayerRequirement(VarPlayerID.MURDERSUS, 4);
+		elizabethGuilty = new VarplayerRequirement(VarPlayerID.MURDERSUS, 5);
+		frankGuilty = new VarplayerRequirement(VarPlayerID.MURDERSUS, 6);
 
-		hasCriminalSilverItem = new Conditions(
-			LogicType.OR,
+		hasCriminalSilverItem = or(
 			new Conditions(annaGuilty, silverNecklace),
 			new Conditions(bobGuilty, silverCup),
 			new Conditions(carolGuilty, silverBottle),
@@ -233,8 +304,7 @@ public class MurderMystery extends BasicQuestHelper
 			new Conditions(frankGuilty, silverPot)
 		);
 
-		hasSuspectPrint = new Conditions(
-			LogicType.OR,
+		hasSuspectPrint = or(
 			new Conditions(annaGuilty, annaPrint),
 			new Conditions(bobGuilty, bobPrint),
 			new Conditions(carolGuilty, carolPrint),
@@ -243,18 +313,18 @@ public class MurderMystery extends BasicQuestHelper
 			new Conditions(frankGuilty, frankPrint)
 		);
 
-		hadKillerPrint = new RuneliteRequirement(getConfigManager(), "murdermysteryhadkillerprint",
+		hadKillerPrint = new RuneliteRequirement(configManager, "murdermysteryhadkillerprint",
 			new Conditions(killersPrint)
 		);
 
 		hasSilverItemFlour = new Conditions(
 			LogicType.OR,
-			new Conditions(annaGuilty, silverNecklaceFlour),
-			new Conditions(bobGuilty, silverCupFlour),
-			new Conditions(carolGuilty, silverBottleFlour),
-			new Conditions(davidGuilty, silverBookFlour),
-			new Conditions(elizabethGuilty, silverNeedleFlour),
-			new Conditions(frankGuilty, silverPotFlour)
+			and(annaGuilty, silverNecklaceFlour),
+			and(bobGuilty, silverCupFlour),
+			and(carolGuilty, silverBottleFlour),
+			and(davidGuilty, silverBookFlour),
+			and(elizabethGuilty, silverNeedleFlour),
+			and(frankGuilty, silverPotFlour)
 		);
 
 		// TODO: This currently can't be used as checks are on each tick, but the text change + removal can occur within a tick
@@ -284,7 +354,7 @@ public class MurderMystery extends BasicQuestHelper
 			true,
 			new DialogRequirement("Frank", "clean that family crest", false)
 		);
-		talkedToSuspect = new RuneliteRequirement(getConfigManager(), "murdermysterytalkedtosuspect",
+		talkedToSuspect = new RuneliteRequirement(configManager, "murdermysterytalkedtosuspect",
 			new Conditions(
 				LogicType.OR,
 				new Conditions(annaGuilty, talkedToAnna),
@@ -298,29 +368,29 @@ public class MurderMystery extends BasicQuestHelper
 
 		checkedAnna = new Conditions(
 			true,
-			new WidgetTextRequirement(229, 1, "The compost is teeming with maggots.")
+			new WidgetTextRequirement(InterfaceID.Messagebox.TEXT, "The compost is teeming with maggots.")
 		);
 		checkedBob = new Conditions(
 			true,
-			new WidgetTextRequirement(229, 1, "The beehive buzzes with activity.")
+			new WidgetTextRequirement(InterfaceID.Messagebox.TEXT, "The beehive buzzes with activity.")
 		);
 		checkedCarol = new Conditions(
 			true,
-			new WidgetTextRequirement(229, 1, "The drain is totally blocked.")
+			new WidgetTextRequirement(InterfaceID.Messagebox.TEXT, "The drain is totally blocked.")
 		);
 		checkedDavid = new Conditions(
 			true,
-			new WidgetTextRequirement(229, 1, "few hundred spiders ready to hatch.")
+			new WidgetTextRequirement(InterfaceID.Messagebox.TEXT, "few hundred spiders ready to hatch.")
 		);
 		checkedElizabeth = new Conditions(
 			true,
-			new WidgetTextRequirement(229, 1, "The fountain is swarming")
+			new WidgetTextRequirement(InterfaceID.Messagebox.TEXT, "The fountain is swarming")
 		);
 		checkedFrank = new Conditions(
 			true,
-			new WidgetTextRequirement(229, 1, "crest but it is very dirty")
+			new WidgetTextRequirement(InterfaceID.Messagebox.TEXT, "crest but it is very dirty")
 		);
-		checkedSuspect = new RuneliteRequirement(getConfigManager(), "murdermysterydisprovedsuspect",
+		checkedSuspect = new RuneliteRequirement(configManager, "murdermysterydisprovedsuspect",
 			new Conditions(
 				LogicType.OR,
 				checkedAnna,
@@ -334,71 +404,64 @@ public class MurderMystery extends BasicQuestHelper
 	}
 
 	@Override
-	protected void setupRequirements()
+	public Map<Integer, QuestStep> loadSteps()
 	{
-		pot = new ItemRequirement("Pot", ItemID.POT_EMPTY);
-		pungentPot = new ItemRequirement("Pungent pot", ItemID.MURDERPOT2);
+		initializeRequirements();
+		setupConditions();
+		setupSteps();
 
-		criminalsDaggerAny = new ItemRequirement("Criminal's dagger", ItemID.MURDERWEAPON);
-		criminalsDaggerAny.addAlternates(ItemID.MURDERWEAPONDUST, ItemID.MURDERFINGERPRINT);
+		var steps = new HashMap<Integer, QuestStep>();
 
-		criminalsDagger = new ItemRequirement("Criminal's dagger", ItemID.MURDERWEAPON);
-		criminalsDaggerHighlighted = new ItemRequirement("Criminal's dagger", ItemID.MURDERWEAPON);
-		criminalsDaggerHighlighted.setHighlightInInventory(true);
+		steps.put(0, talkToGuard);
 
-		criminalsDaggerFlour = new ItemRequirement("Criminal's dagger", ItemID.MURDERWEAPONDUST);
-		criminalsDaggerFlourHighlighted = new ItemRequirement("Criminal's dagger", ItemID.MURDERWEAPONDUST);
-		criminalsDaggerFlourHighlighted.setHighlightInInventory(true);
+		var doesntNeedMoreFlypaper = new Conditions(LogicType.OR, twoFlypaper, and(flypaper, unknownPrint));
 
-		criminalsThread = new ItemRequirement("Criminal's thread", ItemID.MURDERTHREADR);
-		criminalsThread.addAlternates(ItemID.MURDERTHREADG, ItemID.MURDERTHREADB);
-		criminalsThread1 = new ItemRequirement("Criminal's thread", ItemID.MURDERTHREADR);
-		criminalsThread2 = new ItemRequirement("Criminal's thread", ItemID.MURDERTHREADG);
-		criminalsThread3 = new ItemRequirement("Criminal's thread", ItemID.MURDERTHREADB);
-		twoFlypaper = new ItemRequirement("Flypaper", ItemID.MURDERPAPER, 2);
-		flypaper = new ItemRequirement("Flypaper", ItemID.MURDERPAPER);
-		flypaper.setHighlightInInventory(true);
-		flypaper.setTooltip("You can get more from the sack in the shed on the west of the Sinclair Mansion");
-		potOfFlourHighlighted = new ItemRequirement("Pot of flour", ItemID.POT_FLOUR);
-		potOfFlourHighlighted.setHighlightInInventory(true);
-		unknownPrint = new ItemRequirement("Unknown print", ItemID.MURDERFINGERPRINT1);
+		var hadPotAndThread = and(hadThread, hadPot);
 
-		/* Thread 1 items */
-		bobPrint = new ItemRequirement("Bob's print", ItemID.MURDERFINGERPRINTB);
-		carolPrint = new ItemRequirement("Carol's print", ItemID.MURDERFINGERPRINTC);
-		silverCup = new ItemRequirement("Silver cup", ItemID.MURDERCUP);
-		silverCupFlour = new ItemRequirement("Silver cup", ItemID.MURDERCUPDUST);
-		silverBottle = new ItemRequirement("Silver bottle", ItemID.MURDERBOTTLE);
-		silverBottleFlour = new ItemRequirement("Silver bottle", ItemID.MURDERBOTTLEDUST);
+		var checkingPrintSteps = new ConditionalStep(this, pickUpDagger);
+		/* compare prints */
+		checkingPrintSteps.addStep(and(unknownPrint, hasSuspectPrint), comparePrints);
+		checkingPrintSteps.addStep(and(unknownPrint, hasSilverItemFlour, flypaper), useFlypaper);
+		checkingPrintSteps.addStep(and(unknownPrint, hasCriminalSilverItem, flypaper, potOfFlourHighlighted), useFlour);
+		checkingPrintSteps.addStep(and(unknownPrint, hasCriminalSilverItem, flypaper), fillPotWithFlourForSilver);
+		checkingPrintSteps.addStep(and(unknownPrint, hasCriminalSilverItem), collectFlypaper);
+		/* Unknown print */
+		checkingPrintSteps.addStep(and(criminalsDaggerFlour, hasCriminalSilverItem), useFlypaperOnDagger);
+		checkingPrintSteps.addStep(and(criminalsDaggerAny, hasCriminalSilverItem, potOfFlourHighlighted), useFlourOnDagger);
+		checkingPrintSteps.addStep(and(criminalsDaggerAny, doesntNeedMoreFlypaper, hasCriminalSilverItem), fillPotWithFlour);
+		checkingPrintSteps.addStep(and(criminalsDaggerAny, doesntNeedMoreFlypaper), searchBarrel);
+		checkingPrintSteps.addStep(criminalsDaggerAny, collectTwoFlypaper);
 
-		/* Thread 2 items */
-		annaPrint = new ItemRequirement("Anna's print", ItemID.MURDERFINGERPRINTA);
-		davidPrint = new ItemRequirement("David's print", ItemID.MURDERFINGERPRINTD);
-		silverNecklace = new ItemRequirement("Silver necklace", ItemID.MURDERNECKLACE);
-		silverNecklaceFlour = new ItemRequirement("Silver necklace", ItemID.MURDERNECKLACEDUST);
-		silverBook = new ItemRequirement("Silver book", ItemID.MURDERBOOK);
-		silverBookFlour = new ItemRequirement("Silver book", ItemID.MURDERBOOKDUST);
+		var investigating = new ConditionalStep(this, searchWindowForThread);
+		investigating.addStep(and(hadPotAndThread, hadKillerPrint, checkedSuspect), finishQuest);
+		investigating.addStep(and(hadPotAndThread, hadKillerPrint, talkedToSuspect), searchSuspectItem);
+		// If we've talked to the Poison Salesman through the "find customers" option, _AND_ through the "i found this pot....." option (but only if we have the pot still),
+		// then prompt the player to talk to the suspect
+		investigating.addStep(and(hadPotAndThread, hadKillerPrint, talkedToPoisonSalesman, or(talkedToPoisonSalesman2, not(pungentPot))), talkToSuspect);
+		investigating.addStep(and(hadPotAndThread, hadKillerPrint, talkedToPoisonSalesman2, not(talkedToPoisonSalesman)), talkToPoisonSalesman);
+		investigating.addStep(and(hadPotAndThread, hadKillerPrint, talkedToPoisonSalesman, not(talkedToPoisonSalesman2), pungentPot), talkToPoisonSalesman2);
+		investigating.addStep(and(hadPotAndThread, hadKillerPrint, heardAboutPoisonSalesman), talkToPoisonSalesman);
+		investigating.addStep(and(hadPotAndThread, hadKillerPrint), talkToGossip);
+		investigating.addStep(hadPotAndThread, checkingPrintSteps); /* Get dagger print */
+		investigating.addStep(hadThread, pickUpPungentPot);
 
-		/* Thread 3 items */
-		elizabethPrint = new ItemRequirement("Elizabeth's print", ItemID.MURDERFINGERPRINTE);
-		frankPrint = new ItemRequirement("Frank's print", ItemID.MURDERFINGERPRINTF);
-		silverNeedle = new ItemRequirement("Silver needle", ItemID.MURDERNEEDLE);
-		silverNeedleFlour = new ItemRequirement("Silver needle", ItemID.MURDERNEEDLEDUST);
-		silverPot = new ItemRequirement("Silver needle", ItemID.MURDERPOT);
-		silverPotFlour = new ItemRequirement("Silver needle", ItemID.MURDERPOTDUST);
+		steps.put(1, investigating);
 
-		killersPrint = new ItemRequirement("Killer's print", ItemID.MURDERFINGERPRINT);
+		return steps;
 	}
 
 	public void setupSteps()
 	{
 		talkToGuard = new NpcStep(this, NpcID.MURDERGUARD, new WorldPoint(2741, 3561, 0), "Talk to the Guard in the Sinclair Manor north of Camelot.");
-		talkToGuard.addDialogSteps("Yes.", "Sure, I'll help.");
+		talkToGuard.addDialogSteps("Yes.");
 
-		pickUpPungentPot = new DetailedQuestStep(this, new WorldPoint(2747, 3579, 0), "Enter the mansion and pick up the pungent pot inside the east room.", pungentPot);
-		pickUpDagger = new DetailedQuestStep(this, new WorldPoint(2746, 3578, 0), "Pick up the criminal's dagger.", criminalsDaggerAny);
+		pickUpPungentPot = new ItemStep(this, new WorldPoint(2747, 3579, 0), "Enter the mansion and pick up the pungent pot inside the east room.", pungentPot);
+		pickUpDagger = new ItemStep(this, new WorldPoint(2746, 3578, 0), "Pick up the criminal's dagger.", criminalsDaggerAny);
 		searchWindowForThread = new ObjectStep(this, ObjectID.MURDERWINDOW, new WorldPoint(2748, 3577, 0), "Search the window for a clothing thread. The colour of the thread will match the killer's trousers.", criminalsThread);
-		fillPotWithFlour = new ObjectStep(this, ObjectID.FLOURBARREL, new WorldPoint(2733, 3582, 0), "Fill your pot with flour from the barrel in the mansion's kitchen.", pot);
+		var actuallyFillPotWithFlour = new ObjectStep(this, ObjectID.FLOURBARREL, new WorldPoint(2733, 3582, 0), "", pot);
+		var goDownstairs = new ObjectStep(this, ObjectID.MURDER_QIP_SPIRALSTAIRSTOP, new WorldPoint(2736, 3581, 1), "Head downstairs to the ground floor.");
+		fillPotWithFlour = new ConditionalStep(this, actuallyFillPotWithFlour, "Fill your pot with flour from the barrel in the mansion's kitchen.");
+		((ConditionalStep) fillPotWithFlour).addStep(isUpstairs, goDownstairs);
 		useFlourOnDagger = new DetailedQuestStep(this, "Use the pot of flour on the Criminal's dagger.", potOfFlourHighlighted, criminalsDaggerHighlighted);
 		collectTwoFlypaper = new ObjectStep(this, ObjectID.MURDERSACKS, new WorldPoint(2731, 3582, 0), "Investigate the sacks in the shed for flypaper. Get 2 pieces.", twoFlypaper);
 		collectTwoFlypaper.addDialogStep("Yes, it might be useful.");
@@ -451,12 +514,15 @@ public class MurderMystery extends BasicQuestHelper
 		compareFrank = new DetailedQuestStep(this, "Use Frank's prints on the killer's print to compare them.", unknownPrint.highlighted(), frankPrint.highlighted());
 
 		talkToGossip = new NpcStep(this, NpcID.GOSSIPY_MAN, new WorldPoint(2741, 3557, 0), "Talk to Gossip, just south of the Sinclair Mansion.");
-		talkToGossip.addDialogStep(2, "Who do you think was responsible?");
+		talkToGossip.addDialogStep("Who do you think was responsible?");
 
-		talkToPoisonSalesman = new NpcStep(this, NpcID.POISON_SALESMAN, new WorldPoint(2694, 3493, 0), "Talk to the " +
-			"Poison Salesman in the Seers' Village pub.");
+		talkToPoisonSalesman = new NpcStep(this, NpcID.POISON_SALESMAN, new WorldPoint(2694, 3493, 0), "Talk to the Poison Salesman in the Seers' Village pub about his customers.");
 		talkToPoisonSalesman.addDialogStep("Who did you sell Poison to at the house?");
 		talkToPoisonSalesman.addDialogStep("Talk about the Murder Mystery Quest");
+
+		talkToPoisonSalesman2 = new NpcStep(this, NpcID.POISON_SALESMAN, new WorldPoint(2694, 3493, 0), "Talk to the Poison Salesman in the Seers' Village pub about the pungent pot.", pungentPot);
+		talkToPoisonSalesman2.addDialogStep("I have this pot I found at the murder scene...");
+		talkToPoisonSalesman2.addDialogStep("Talk about the Murder Mystery Quest");
 
 		talkToAnna = new NpcStep(this, NpcID.ANNA_SINCLAIR, new WorldPoint(2734, 3575, 0), "Talk to Anna in the mansion about what she used the poison for. Make sure to finish the dialog.");
 		talkToBob = new NpcStep(this, NpcID.BOB_SINCLAIR, new WorldPoint(2748, 3559, 0), "Talk to Bob south of the mansion about what he used the poison for. Make sure to finish the dialog.");
@@ -471,7 +537,7 @@ public class MurderMystery extends BasicQuestHelper
 		searchBob = new ObjectStep(this, ObjectID.MURDERHIVE, new WorldPoint(2730, 3559, 0), "Search the beehive south west of the mansion. If a dialog box doesn't come up, go back to Bob to ask about poison, and COMPLETE THE DIALOG.");
 		searchCarol = new ObjectStep(this, ObjectID.MURDERDRAIN, new WorldPoint(2736, 3573, 0), "Search the drain south of the mansion. If a dialog box doesn't come up, go back to Carol to ask about poison, and COMPLETE THE DIALOG.");
 		searchDavid = new ConditionalStep(this, goUpstairs, "Search the spider's nest, upstairs in the mansion to the south. If a dialog box doesn't come up, go back to David to ask about poison, and COMPLETE THE DIALOG.");
-		((ConditionalStep)searchDavid).addStep(isUpstairs, new ObjectStep(this, ObjectID.MURDERWEB, new WorldPoint(2740, 3574, 1), ""));
+		((ConditionalStep) searchDavid).addStep(isUpstairs, new ObjectStep(this, ObjectID.MURDERWEB, new WorldPoint(2740, 3574, 1), ""));
 		searchElizabeth = new ObjectStep(this, ObjectID.MURDERFOUNTAIN, new WorldPoint(2747, 3563, 0), "Search the fountain south east of the mansion. If a dialog box doesn't come up, go back to Elizabeth to ask about poison, and COMPLETE THE DIALOG.");
 		searchFrank = new ObjectStep(this, ObjectID.MURDERSIGN, new WorldPoint(2746, 3573, 0), "Search the family crest attached to the south side of the mansion to the east. If a dialog box doesn't come up, go back to Frank to ask about poison, and COMPLETE THE DIALOG.");
 
@@ -485,74 +551,74 @@ public class MurderMystery extends BasicQuestHelper
 		remainingSteps.addDialogStep("I know who did it!");
 		remainingSteps.setShowInSidebar(false);
 
-		useFlour = new ConditionalStep(this, new DetailedQuestStep(this, ""));
-		useFlour.addStep(new Conditions(elizabethGuilty), useFlourOnNeedle);
-		useFlour.addStep(new Conditions(annaGuilty), useFlourOnNecklace);
-		useFlour.addStep(new Conditions(carolGuilty), useFlourOnBottle);
-		useFlour.addStep(new Conditions(davidGuilty), useFlourOnBook);
-		useFlour.addStep(new Conditions(frankGuilty), useFlourOnPot);
-		useFlour.addStep(new Conditions(bobGuilty), useFlourOnCup);
-		useFlourSidebar = new DetailedQuestStep(this, "Use flour on the suspect's item.");
-		useFlourSidebar.addSubSteps(useFlourOnNeedle, useFlourOnNecklace, useFlourOnBottle, useFlourOnBook, useFlourOnPot, useFlourOnCup);
+		var useFlourFallback = new DetailedQuestStep(this, "Use flour on the suspect's item.");
+		useFlour = new ConditionalStep(this, useFlourFallback);
+		useFlour.setShouldPassthroughText(true);
+		useFlour.addStep(elizabethGuilty, useFlourOnNeedle);
+		useFlour.addStep(annaGuilty, useFlourOnNecklace);
+		useFlour.addStep(carolGuilty, useFlourOnBottle);
+		useFlour.addStep(davidGuilty, useFlourOnBook);
+		useFlour.addStep(frankGuilty, useFlourOnPot);
+		useFlour.addStep(bobGuilty, useFlourOnCup);
 
-		searchBarrel = new ConditionalStep(this, new DetailedQuestStep(this, ""));
-		searchBarrel.addStep(new Conditions(elizabethGuilty), searchElizabethsBarrel);
-		searchBarrel.addStep(new Conditions(annaGuilty), searchAnnasBarrel);
-		searchBarrel.addStep(new Conditions(carolGuilty), searchCarolsBarrel);
-		searchBarrel.addStep(new Conditions(davidGuilty), searchDavidsBarrel);
-		searchBarrel.addStep(new Conditions(frankGuilty), searchFranksBarrel);
-		searchBarrel.addStep(new Conditions(bobGuilty), searchBobsBarrel);
-		searchBarrelSidebar = new DetailedQuestStep(this, "Search the suspect's barrel.");
-		searchBarrelSidebar.addSubSteps(searchElizabethsBarrel, searchAnnasBarrel, searchCarolsBarrel, searchDavidsBarrel, searchFranksBarrel, searchBobsBarrel);
+		var searchBarrelFallback = new DetailedQuestStep(this, "Search the suspect's barrel.");
+		searchBarrel = new ConditionalStep(this, searchBarrelFallback);
+		searchBarrel.setShouldPassthroughText(true);
+		searchBarrel.addStep(elizabethGuilty, searchElizabethsBarrel);
+		searchBarrel.addStep(annaGuilty, searchAnnasBarrel);
+		searchBarrel.addStep(carolGuilty, searchCarolsBarrel);
+		searchBarrel.addStep(davidGuilty, searchDavidsBarrel);
+		searchBarrel.addStep(frankGuilty, searchFranksBarrel);
+		searchBarrel.addStep(bobGuilty, searchBobsBarrel);
 
-		useFlypaper = new ConditionalStep(this, new DetailedQuestStep(this, ""));
-		useFlypaper.addStep(new Conditions(elizabethGuilty), useFlypaperOnNeedle);
-		useFlypaper.addStep(new Conditions(annaGuilty), useFlypaperOnNecklace);
-		useFlypaper.addStep(new Conditions(carolGuilty), useFlypaperOnBottle);
-		useFlypaper.addStep(new Conditions(davidGuilty), useFlypaperOnBook);
-		useFlypaper.addStep(new Conditions(frankGuilty), useFlypaperOnPot);
-		useFlypaper.addStep(new Conditions(bobGuilty), useFlypaperOnCup);
-		useFlypaperSidebar = new DetailedQuestStep(this, "Use flypaper on the floured item.");
-		useFlypaperSidebar.addSubSteps(useFlypaperOnNeedle, useFlypaperOnNecklace, useFlypaperOnBottle, useFlypaperOnBook, useFlypaperOnPot, useFlypaperOnCup);
+		var useFlypaperFallback = new DetailedQuestStep(this, "Use flypaper on the suspect's item.");
+		useFlypaper = new ConditionalStep(this, useFlypaperFallback);
+		useFlypaper.setShouldPassthroughText(true);
+		useFlypaper.addStep(elizabethGuilty, useFlypaperOnNeedle);
+		useFlypaper.addStep(annaGuilty, useFlypaperOnNecklace);
+		useFlypaper.addStep(carolGuilty, useFlypaperOnBottle);
+		useFlypaper.addStep(davidGuilty, useFlypaperOnBook);
+		useFlypaper.addStep(frankGuilty, useFlypaperOnPot);
+		useFlypaper.addStep(bobGuilty, useFlypaperOnCup);
 
-		comparePrints = new ConditionalStep(this, new DetailedQuestStep(this, ""));
-		comparePrints.addStep(new Conditions(annaGuilty), compareAnna);
-		comparePrints.addStep(new Conditions(bobGuilty), compareBob);
-		comparePrints.addStep(new Conditions(carolGuilty), compareCarol);
-		comparePrints.addStep(new Conditions(davidGuilty), compareDavid);
-		comparePrints.addStep(new Conditions(elizabethGuilty), compareElizabeth);
-		comparePrints.addStep(new Conditions(frankGuilty), compareFrank);
-		comparePrintsSidebar = new DetailedQuestStep(this, "Compare the suspect's prints to the unknown prints.");
-		comparePrintsSidebar.addSubSteps(compareAnna, compareBob, compareCarol, compareDavid, compareElizabeth, compareFrank);
+		var comparePrintsFallback = new DetailedQuestStep(this, "Compare prints with the suspect.");
+		comparePrints = new ConditionalStep(this, comparePrintsFallback);
+		comparePrints.setShouldPassthroughText(true);
+		comparePrints.addStep(annaGuilty, compareAnna);
+		comparePrints.addStep(bobGuilty, compareBob);
+		comparePrints.addStep(carolGuilty, compareCarol);
+		comparePrints.addStep(davidGuilty, compareDavid);
+		comparePrints.addStep(elizabethGuilty, compareElizabeth);
+		comparePrints.addStep(frankGuilty, compareFrank);
 
-		talkToSuspect = new ConditionalStep(this, new DetailedQuestStep(this, ""));
-		talkToSuspect.addStep(new Conditions(elizabethGuilty), talkToElizabeth);
-		talkToSuspect.addStep(new Conditions(carolGuilty), talkToCarol);
-		talkToSuspect.addStep(new Conditions(davidGuilty), talkToDavid);
-		talkToSuspect.addStep(new Conditions(frankGuilty), talkToFrank);
-		talkToSuspect.addStep(new Conditions(bobGuilty), talkToBob);
-		talkToSuspect.addStep(new Conditions(annaGuilty), talkToAnna);
+		var talkToSuspectFallback = new DetailedQuestStep(this, "Talk to the suspect.");
+		talkToSuspect = new ConditionalStep(this, talkToSuspectFallback);
+		talkToSuspect.setShouldPassthroughText(true);
+		talkToSuspect.addStep(elizabethGuilty, talkToElizabeth);
+		talkToSuspect.addStep(carolGuilty, talkToCarol);
+		talkToSuspect.addStep(davidGuilty, talkToDavid);
+		talkToSuspect.addStep(frankGuilty, talkToFrank);
+		talkToSuspect.addStep(bobGuilty, talkToBob);
+		talkToSuspect.addStep(annaGuilty, talkToAnna);
 		talkToSuspect.addDialogStep("Why'd you buy poison the other day?");
-		talkToSuspectSidebar = new DetailedQuestStep(this, "Talk to the suspect.");
-		talkToSuspectSidebar.addSubSteps(talkToElizabeth, talkToCarol, talkToDavid, talkToFrank, talkToBob, talkToAnna);
 
-		searchSuspectItem = new ConditionalStep(this, new DetailedQuestStep(this, ""));
-		searchSuspectItem.addStep(new Conditions(elizabethGuilty), searchElizabeth);
-		searchSuspectItem.addStep(new Conditions(carolGuilty), searchCarol);
-		searchSuspectItem.addStep(new Conditions(davidGuilty), searchDavid);
-		searchSuspectItem.addStep(new Conditions(frankGuilty), searchFrank);
-		searchSuspectItem.addStep(new Conditions(bobGuilty), searchBob);
-		searchSuspectItem.addStep(new Conditions(annaGuilty), searchAnna);
-		searchSuspectItemSidebar = new DetailedQuestStep(this, "Disprove the suspect's alibi by checking the thing they claimed to clean.");
-		searchSuspectItemSidebar.addSubSteps(searchElizabeth, searchCarol, searchDavid, searchFrank, searchBob, searchAnna);
+		var searchSuspectItemFallback = new DetailedQuestStep(this, "Disprove the suspect's alibi by checking the thing they claimed to clean.");
+		searchSuspectItem = new ConditionalStep(this, searchSuspectItemFallback);
+		searchSuspectItem.setShouldPassthroughText(true);
+		searchSuspectItem.addStep(elizabethGuilty, searchElizabeth);
+		searchSuspectItem.addStep(carolGuilty, searchCarol);
+		searchSuspectItem.addStep(davidGuilty, searchDavid);
+		searchSuspectItem.addStep(frankGuilty, searchFrank);
+		searchSuspectItem.addStep(bobGuilty, searchBob);
+		searchSuspectItem.addStep(annaGuilty, searchAnna);
 	}
 
 	@Override
 	public List<ItemRequirement> getItemRequirements()
 	{
-		ArrayList<ItemRequirement> required = new ArrayList<>();
-		required.add(pot);
-		return required;
+		return List.of(
+			pot
+		);
 	}
 
 	@Override
@@ -564,25 +630,57 @@ public class MurderMystery extends BasicQuestHelper
 	@Override
 	public List<ExperienceReward> getExperienceRewards()
 	{
-		return Collections.singletonList(new ExperienceReward(Skill.CRAFTING, 1406));
+		return List.of(
+			new ExperienceReward(Skill.CRAFTING, 1406)
+		);
 	}
 
 	@Override
 	public List<ItemReward> getItemRewards()
 	{
-		return Collections.singletonList(new ItemReward("Coins", ItemID.COINS, 2000));
+		return List.of(
+			new ItemReward("Coins", ItemID.COINS, 2000)
+		);
 	}
 
 	@Override
 	public List<PanelDetails> getPanels()
 	{
-		List<PanelDetails> allSteps = new ArrayList<>();
+		var allSteps = new ArrayList<PanelDetails>();
 
-		allSteps.add(new PanelDetails("Go to the Sinclair Manor", Collections.singletonList(talkToGuard), pot));
-		allSteps.add(new PanelDetails("Collect evidence", Arrays.asList(pickUpPungentPot, pickUpDagger, searchWindowForThread)));
-		allSteps.add(new PanelDetails("Collect fingerprints", Arrays.asList(collectTwoFlypaper, searchBarrelSidebar, fillPotWithFlour,
-			useFlourOnDagger, useFlypaperOnDagger, fillPotWithFlourForSilver, useFlourSidebar, useFlypaperSidebar, comparePrintsSidebar)));
-		allSteps.add(new PanelDetails("Finishing off", Arrays.asList(talkToGossip, talkToPoisonSalesman, talkToSuspectSidebar, searchSuspectItemSidebar, finishQuest)));
+		allSteps.add(new PanelDetails("Go to the Sinclair Manor", List.of(
+			talkToGuard
+		), List.of(
+			pot
+		)));
+
+		allSteps.add(new PanelDetails("Collect evidence", List.of(
+			searchWindowForThread,
+			pickUpPungentPot,
+			pickUpDagger
+		)));
+
+		allSteps.add(new PanelDetails("Collect fingerprints", List.of(
+			collectTwoFlypaper,
+			searchBarrel,
+			fillPotWithFlour,
+			useFlourOnDagger,
+			useFlypaperOnDagger,
+			fillPotWithFlourForSilver,
+			useFlour,
+			useFlypaper,
+			comparePrints
+		)));
+
+		allSteps.add(new PanelDetails("Finishing off", List.of(
+			talkToGossip,
+			talkToPoisonSalesman,
+			talkToPoisonSalesman2,
+			talkToSuspect,
+			searchSuspectItem,
+			finishQuest
+		)));
+
 		return allSteps;
 	}
 }
